2004-11-23  Andreas Madsack  <bolsog@users.sf.net>

	* bugfix in FileSave
	* added possibility to load filename as program-argument
	* added information-dialog
	* added directory-input support in LoadSave-Dialog
	

2004-11-22  Andreas Madsack  <bolsog@users.sf.net>

	* bug in ConfigInsertString resolved
	* klatt-entry field in preferences and events removed

2004-11-21  Andreas Madsack <bolsog@users.sf.net>

	* first Release (beta1)
	* including: 
	  - load/save parfiles
	  - internal wav-generating
	  - modelling-gui elements